WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
304812
[cleanup] RenderBox's constrainBlockMarginInAvailableSpaceOrTrim does not need to be a public function
https://bugs.webkit.org/show_bug.cgi?id=304812
Summary
[cleanup] RenderBox's constrainBlockMarginInAvailableSpaceOrTrim does not nee...
alan
Reported
2025-12-31 14:28:19 PST
ssia
Attachments
[fast-cq]Patch
(5.74 KB, patch)
2025-12-31 14:30 PST
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2025-12-31 14:30:20 PST
Created
attachment 477885
[details]
[fast-cq]Patch
EWS
Comment 2
2026-01-06 07:07:36 PST
Committed
305157@main
(25811e20cd66): <
https://commits.webkit.org/305157@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 477885
[details]
.
Radar WebKit Bug Importer
Comment 3
2026-01-06 07:08:13 PST
<
rdar://problem/167621202
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug