[cleanup] RenderBox's constrainBlockMarginInAvailableSpaceOrTrim does not need to be a public function https://bugs.webkit.org/show_bug.cgi?id=304812

Reviewed by Antti Koivisto.

* Source/WebCore/rendering/RenderBox.cpp:
(WebCore::RenderBox::computeBlockDirectionMargins const):
(WebCore::RenderBox::constrainBlockMarginInAvailableSpaceOrTrim const): Deleted.
* Source/WebCore/rendering/RenderBox.h:

Canonical link: https://commits.webkit.org/305157@main